--- a/build.xml
+++ b/build.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" ?>
-<project name="CarCrashX" default="jarfile">
+<project name="crazywiz" default="jar">
 
     <!-- Initialize build properties  -->
     <target name="init" description="Initializes properties">
-        <property name="project.name" value="CarCrashX" />
+        <property name="project.name" value="crazywiz" />
         <property name="src.dir" value="src" />
-        <property name="main.class" value="org.academiadecodigo.wizards.CarCrashX" />
+        <property name="main.class" value="org.academiadecodigo.wizards.Main" />
         <property name="build.dir" value="build" />
         <property name="classes.dir" value="${build.dir}/classes" />
-        <property name="lib.dir" value="lib" />
+        <property name="jar.dir" value="${build.dir}/jar/" />
+	<property name="lib.dir" value="lib" />
+	<property name="resources.dir" value="resources" />
         <path id="classpath">
             <fileset dir="${lib.dir}" includes="**/*.jar" />
         </path>
@@ -32,14 +34,17 @@
     </target>
 
     <!-- Creates a JAR file -->
-    <target name="jarfile" description="Archives the code" depends="compile">
-        <jar destfile="${build.dir}/${project.name}.jar" basedir="${classes.dir}">
+    <target name="jar" description="Archives the code" depends="compile">
+        <mkdir dir="${jar.dir}" />
+        <jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${classes.dir}">
             <manifest>
                 <attribute name="Main-Class" value="${main.class}" />
-                <attribute name="Class-Path" value="${lib.dir}" />
+		<attribute name="Class-Path" value="${lib.dir} ${resources.dir}" />
             </manifest>
-            <zipgroupfileset dir="${lib.dir}" includes="*.jar"/>
+	    <zipgroupfileset dir="${lib.dir}" includes="*.jar"/>
+	    <fileset dir=".">
+		    <include name="**/${resources.dir}/**"/>
+	    </fileset>
         </jar>
     </target>
-
 </project>
