--- a/build.xml
+++ b/build.xml
@@ -23,12 +23,12 @@
 
     <!-- Removes the build directory -->
     <target name="clean" description="Clean up project" depends="init">
-        <delete dir="${build.dir}" />
+	    <delete dir="${build.dir}" />
     </target>
 
     <!-- Compiles the source code -->
     <target name="compile" description="Compiles the source code" depends="prepare">
-        <javac srcdir="${src.dir}" destdir="${classes.dir}">
+        <javac source="7" target="7" srcdir="${src.dir}" destdir="${classes.dir}">
             <classpath refid="classpath"/>
         </javac>
     </target>
